--- a/app/templates/school/uploadStudent.html
+++ b/app/templates/school/uploadStudent.html
@@ -84,7 +84,7 @@
         table.on('tool(currentTableFilter)', function (obj) {
             var data = obj.data;
             if (obj.event === 'detail') {
-                miniPage.hashChange("/school/yearStudent")
+                miniPage.hashChange("/school/gradeStudent")
                 return false;
             }
 				
