edit models and finish select student page

--- a/app/templates/school/schoolScore.html
+++ b/app/templates/school/schoolScore.html
@@ -9,11 +9,12 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">年级</label>
                             <div class="layui-input-inline">
-                                <select class="layui-inline" name="grade" lay-verify="" lay-search>
-                                	<option value="2020">2020</option>
-                                	<option value="2019">2019</option>
-                                	<option value="2018">2018</option>
-                                </select>   
+<!--                                <select class="layui-inline" name="grade" lay-verify="" lay-search>-->
+<!--                                	<option value="2020">2020</option>-->
+<!--                                	<option value="2019">2019</option>-->
+<!--                                	<option value="2018">2018</option>-->
+<!--                                </select>   -->
+                                 <input type="text" name="grade" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-inline">
