--- a/app/templates/school/selectStudent.html
+++ b/app/templates/school/selectStudent.html
@@ -9,35 +9,38 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">年级</label>
                             <div class="layui-input-inline">
-                                <select class="layui-inline" name="grade" lay-verify="" lay-search>
-                                	<option value="2020">2020</option>
-                                	<option value="2019">2019</option>
-                                	<option value="2018">2018</option>
-                                </select>   
+<!--                                <select class="layui-inline" name="grade" lay-verify="" lay-search>-->
+<!--                                	<option value="2020">2020</option>-->
+<!--                                	<option value="2019">2019</option>-->
+<!--                                	<option value="2018">2018</option>-->
+<!--                                </select>   -->
+								<input type="text" name="grade" autocomplete="off" class="layui-input">
                             </div>
                         </div>
 						<div class="layui-inline">
 							<label class="layui-form-label">学院</label>
 							<div class="layui-input-inline">
-							    <select class="layui-inline" name="college_name" lay-verify="" lay-search>
-									<option value="数学计算机">数学计算机</option>
-									<option value="物理信息">物理信息</option>
-									<option value="体育学院">体育学院</option>
-							    </select>   
+<!--							    <select class="layui-inline" name="college_name" lay-verify="" lay-search>-->
+<!--									<option value="数学计算机">数学计算机</option>-->
+<!--									<option value="物理信息">物理信息</option>-->
+<!--									<option value="体育学院">体育学院</option>-->
+<!--							    </select>   -->
+								<input type="text" name="college_name" autocomplete="off" class="layui-input">
 							</div>
 						 </div>
 						 <div class="layui-inline">
 						     <label class="layui-form-label">专业</label>
 						     <div class="layui-input-inline">
-						         <select class="layui-inline" name="major_name" lay-verify="" lay-search>
-						         	<option value="物理学">物理学</option>
-						         	<option value="计算机">计算机</option>
-						         	<option value="体育">体育</option>
-						         </select>   
+<!--						         <select class="layui-inline" name="major_name" lay-verify="" lay-search>-->
+<!--						         	<option value="物理学">物理学</option>-->
+<!--						         	<option value="计算机">计算机</option>-->
+<!--						         	<option value="体育">体育</option>-->
+<!--						         </select>   -->
+								 <input type="text" name="major_name" autocomplete="off" class="layui-input">
 						     </div>
 						 </div>
                         <div class="layui-inline">
-                            <button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
+                            <button type="submit" class="layui-btn layui-btn-primary" id="search" lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
                         </div>
                     </div>
                 </form>
@@ -54,9 +57,9 @@
 		<div>已经抽取信息</div>
         <table class="layui-hide" id="currentTableId" lay-filter="currentTableFilter"></table>
 		<div>历史抽取信息</div>
-		<script type="text/html" id="previousStudentBar">
-		    <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="detail">查看详情</a>
-		</script>
+<!--		<script type="text/html" id="previousStudentBar">-->
+<!--		    <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="detail">查看详情</a>-->
+<!--		</script>-->
 		<table class="layui-hide" id="previousStudentId" lay-filter="previousStudentFilter"></table>
         
 
@@ -70,29 +73,10 @@
             table = layui.table,
             miniPage = layui.miniPage;
 			
-		// 监听搜索操作
-		form.on('submit(data-search-btn)', function (data) {
-		    var result = JSON.stringify(data.field);
-		    layer.alert(result, {
-		        title: '最终的搜索信息'
-		    });
-		
-		    //执行搜索重载
-		    table.reload('currentTableId', {
-		        page: {
-		            curr: 1
-		        }
-		        , where: {
-		            searchParams: result
-		        }
-		    }, 'data');
-		
-		    return false;
-		});	
-		
+
 		table.render({
 			elem: '#studentTableId',
-			url: '/api/student-list',
+			data:[],
 			toolbar: '#studentToolBar',
 			defaultToolbar: ['filter', 'exports', 'print', {
 				title: '提示',
@@ -115,43 +99,50 @@
 			page: true,
 			skin: 'line'
 		});
-			
-		//监听表格复选框选择
-		table.on('checkbox(studentTableFilter)', function (obj) {
-		    console.log(obj)
+		var refreshTable=function(){
+            $('#search').click();
+        };
+
+			// 监听搜索操作
+		form.on('submit(data-search-btn)', function (data) {
+		    $.get("/api/student",data.field,function(res){
+                 newdata=res.code==0?res.data:[];
+                //执行搜索重载
+                table.reload('studentTableId', {
+                                   data:newdata
+                 });
+            });
+		    return false;
 		});
-		//监听添加
-		table.on('tool(studentTableId)',function(obj){
-			
-		})
-		
-		/**
-		 * toolbar事件监听
-		 */
-		table.on('toolbar(studentTableFilter)', function (obj) {
-		    if (obj.event === 'add') {   // 监听添加操作
-		        var content = miniPage.getHrefContent('page/addStudent.html');
-		        var openWH = miniPage.getOpenWidthHeight();
-		
-		        var index = layer.open({
-		            title: '添加学生',
-		            type: 1,
-		            shade: 0.2,
-		            maxmin:true,
-		            shadeClose: true,
-		            area: [openWH[0] + 'px', openWH[1] + 'px'],
-		            offset: [openWH[2] + 'px', openWH[3] + 'px'],
-		            content: content,
-		        });
-		        $(window).on("resize", function () {
-		            layer.full(index);
-		        });
-		    } 
+
+
+
+        //监听添加
+		table.on('toolbar(studentTableFilter)',function(obj){
+			if(obj.event === 'add'){
+			    var checkStatus = table.checkStatus('studentTableId');
+			    var student_ids=[];
+			    $.each(checkStatus.data,function(index,e){
+			        student_ids.push(e.id);
+			    });
+			    $.post("/api/testingStudent",{"student_ids":student_ids.join(",")},function(res){
+			    console.log(res)
+			        if(res.code==0){
+			            console.log(res.data);
+			            layer.msg("请求成功，共添加"+res.data.total_num+"人，成功"+res.data.success_num+"人")
+			        }
+			        else{
+			            layer.msg("添加失败，"+res.msg);
+			        }
+			    });
+			}
 		});
+        refreshTable()
+
 		
         table.render({
             elem: '#currentTableId',
-            url: '/api/grade-student',
+            url: '/api/testingGradeStudent',
             toolbar: true,
             defaultToolbar: ['filter', 'exports', 'print', {
                 title: '提示',
@@ -159,7 +150,7 @@
                 icon: 'layui-icon-tips'
             }],
             cols: [[
-                {field: 'year', title: '年级'},
+                {field: 'grade', title: '年级'},
                 {field: 'boy_num',  title: '男生人数'},
                 {field: 'girl_num', title: '女生人数'},
 				{field:'total_num',title:'总人数'}
@@ -173,7 +164,7 @@
         
 		table.render({
 		    elem: '#previousStudentId',
-		    url: '/api/grade-student',
+		    url: '/api/getTestingSelectionBefore',
 		    toolbar: true,
 		    defaultToolbar: ['filter', 'exports', 'print', {
 		        title: '提示',
@@ -183,8 +174,7 @@
 		    cols: [[
 		        {field: 'year', title: '年份'},
 		        {field: 'boy_num',  title: '男生人数'},
-		        {field: 'girl_num', title: '女生人数', minWidth: 150},
-				{title: '操作', minWidth: 150, toolbar: '#previousStudentBar', align: "center"}
+		        {field: 'girl_num', title: '女生人数', minWidth: 150}
 		    ]],
 		    limits: [10, 15, 20, 25, 50, 100],
 		    limit: 15,
@@ -192,27 +182,7 @@
 		    skin: 'line'
 		});
 		
-		table.on('tool(previousStudentFilter)', function (obj) {
-		    var data = obj.data;
-		    if (obj.event === 'detail') {
-				// var content = miniPage.getHrefContent('page/yearStudent.html');
-				// var openWH = miniPage.getOpenWidthHeight();
-				
-				// var index = layer.open({
-				//     title: '历史详细数据',
-				//     type: 1,
-				//     shade: 0,
-				//     maxmin:true,
-				//     shadeClose: true,
-				//     area: [openWH[0] + 'px', openWH[1] + 'px'],
-				//     offset: [openWH[2] + 'px', openWH[3] + 'px'],
-				//     content: content,
-				// });
-				miniPage.hashChange("page/yearStudent.html");
-				return false;
-		    } 
-		});
-
+<!--
         
 
     });
