--- a/app/templates/school/studentScore.html
+++ b/app/templates/school/studentScore.html
@@ -7,6 +7,12 @@
                 <form class="layui-form layui-form-pane" action="">
                     <div class="layui-form-item">
                         <div class="layui-inline">
+                            <label class="layui-form-label">年份</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="year" autocomplete="off" class="layui-input" value="{{nowyear}}">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
                             <label class="layui-form-label">姓名</label>
                             <div class="layui-input-inline">
                                 <input type="text" name="name" autocomplete="off" class="layui-input">
@@ -21,21 +27,23 @@
 						<div class="layui-inline">
 						    <label class="layui-form-label">年级</label>
 						    <div class="layui-input-inline">
-						        <select class="layui-inline" name="grade" lay-verify="" lay-search>
-						        	<option value="2020">2020</option>
-						        	<option value="2019">2019</option>
-						        	<option value="2018">2018</option>
-						        </select>   
+<!--						        <select class="layui-inline" name="grade" lay-verify="" lay-search>-->
+<!--						        	<option value="2020">2020</option>-->
+<!--						        	<option value="2019">2019</option>-->
+<!--						        	<option value="2018">2018</option>-->
+<!--						        </select>   -->
+                                <input type="text" name="grade" autocomplete="off" class="layui-input">
 						    </div>
 						</div>
 						<div class="layui-inline">
 							<label class="layui-form-label">学院</label>
 							<div class="layui-input-inline">
-							    <select class="layui-inline" name="college" lay-verify="" lay-search>
-									<option value="数学计算机">数学计算机</option>
-									<option value="物理信息">物理信息</option>
-									<option value="体育学院">体育学院</option>
-							    </select>   
+<!--							    <select class="layui-inline" name="college" lay-verify="" lay-search>-->
+<!--									<option value="数学计算机">数学计算机</option>-->
+<!--									<option value="物理信息">物理信息</option>-->
+<!--									<option value="体育学院">体育学院</option>-->
+<!--							    </select>   -->
+                                <input type="text" name="college_name" autocomplete="off" class="layui-input">
 							</div>
 						 </div>
                         <div class="layui-inline">
@@ -48,7 +56,9 @@
 
         
         <table class="layui-hide" id="currentTableId" lay-filter="currentTableFilter"></table>
-
+        <script type="text/html" id="currentTableBar">
+            <a class="layui-btn layui-btn-normal layui-btn-xs data-count-edit" lay-event="detail">查看详情</a>
+        </script>
        
 
     </div>
@@ -60,29 +70,28 @@
             form = layui.form,
             table = layui.table,
             miniPage = layui.miniPage;
-		var baseTitle=[
-                {type: "checkbox", width: 50},
-                {field: 'id', title: '序号'},
-                {field: 'college_name', title: '学院（系）名称', minWidth: 150},
-                {field: 'grade', title: '年级'},
-                {field: 'class_name', title: '专业班级'},
-                {field: 'name', title: '姓名'},
-                {field: 'sex',  title: '性别'},
-                {field: 'student_number',  title: '学号', sort: true, minWidth: 150},
-                {field: 'comment',  title: '备注'},
-				{field: 'student_number',  title: '学号', sort: true, minWidth: 150}
-            ];
-			$.get
+
         table.render({
             elem: '#currentTableId',
-            url: '/api/student-list',
+            data:[]
             toolbar: 'true',
             defaultToolbar: ['filter', 'exports', 'print', {
                 title: '提示',
                 layEvent: 'LAYTABLE_TIPS',
                 icon: 'layui-icon-tips'
             }],
-            cols: [baseTitle],
+            cols: [[
+                {field: 'id', title: '序号'},
+                {field: 'college_name', title: '学院（系）名称', minWidth: 150},
+                {field: 'grade', title: '年级'},
+                {field: 'class_name', title: '专业班级'},
+                {field: 'name', title: '姓名'},
+                {field: 'sex',  title: '性别'},
+				{field: 'student_number',  title: '学号', sort: true, minWidth: 150}
+                {field: 'year',  title: '体测年份'},
+                {field: 'score',  title: '总分'},
+                {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
+				]],
             limits: [10, 15, 20, 25, 50, 100],
             limit: 15,
             page: true,
@@ -94,34 +103,8 @@
 		
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
-            var result = JSON.stringify(data.field);
-            layer.alert(result, {
-                title: '最终的搜索信息'
-            });
-			var gradeTitle=[
-				{field: '50米',  title: '50米'},
-				{field: '坐位体前屈',  title: '坐位体前屈'},
-				{field: '立定跳远',  title: '立定跳远'},
-				{field: '仰卧起坐（女）',  title: '仰卧起坐（女）'},
-				{field: '引体向上（男）',  title: '引体向上（男）'},
-				{field: '800米（女）',  title: '800米（女）'},
-				{field: '1000米（男）',  title: '1000米（男）'},
-			];
-			//添加元素到数组
-			var newTitle=baseTitle;
-			$.each(gradeTitle,function(index,value){
-				newTitle.push(value);
-			});
-			console.log(newTitle);
-            //执行搜索重载
             table.reload('currentTableId', {
-                page: {
-                    curr: 1
-                }
-                , where: {
-                    searchParams: result
-                },
-				cols:[newTitle]
+                $.get("/api/
             });
 
             return false;
@@ -129,11 +112,13 @@
 		
     
 
-        //监听表格复选框选择
-        table.on('checkbox(currentTableFilter)', function (obj) {
-            console.log(obj)
-        });
 
+        table.on('tool(currentTableFilter)', function (obj) {
+		    var data = obj.data;
+		    if (obj.event === 'detail') {
+				console.log(data);
+		    }
+		});
        
 
     });
