province merge no render data

--- a/app/templates/school/index.html
+++ b/app/templates/school/index.html
@@ -121,7 +121,7 @@
             miniTongji = layui.miniTongji;
 
         var options = {
-            iniUrl: "/api/systemInit",    // 初始化接口
+            iniUrl: "/api/systemInit?type=1",    // 初始化接口
             renderPageVersion: true,    // 初始化页面是否加版本号
             bgColorDefault: false,      // 主题默认配置
             multiModule: true,          // 是否开启多模块
